# magic-pipeline

./: README.md  pyproject.toml
scripts/: pre-build
src/magic_pipeline/: __init__.py
src/magic_pipeline/constant/: __init__.py  pipeline.py
src/magic_pipeline/context/: __init__.py  command_context.py  command_decorator.py  context.py  model_context.py  node_context.py  step_context.py
src/magic_pipeline/core/: __init__.py
src/magic_pipeline/core/command/: __init__.py  command.py
src/magic_pipeline/core/executor/: __init__.py  command_executor.py  executor.py  pipeline_executor.py  step_executor.py
src/magic_pipeline/core/model/: __init__.py  commands.py  loops.py  models.py
src/magic_pipeline/core/node/: node.py
src/magic_pipeline/core/parser/: base_parser.py  command_parser.py  loop_parser.py
src/magic_pipeline/core/providers/: __init__.py  base_provider.py
src/magic_pipeline/core/providers/llm/: llm_manager.py  llm_provider.py  ollama.py
src/magic_pipeline/core/scope/: __init__.py  scope.py  step_scope.py
src/magic_pipeline/core/step/: step.py
src/magic_pipeline/core/validate/: project_validate.py
src/magic_pipeline/exception/: exceptions.py
src/magic_pipeline/register/: __init__.py  register.py
src/magic_pipeline/result/: __init__.py  result.py
src/magic_pipeline/utils/: loader.py
